--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -24,9 +24,13 @@
             </div>
             <div class="sub_container mt-20">
               <h1 class="sub_heading mt-15">Contact:</h1>
-              <p id="user_contact" class="text editable_section">0330-2842247</p>
+              <p id="user_contact" class="text editable_section">
+                0330-2842247
+              </p>
               <h1 class="sub_heading mt-10">Email:</h1>
-              <p id="user_email" class="text editable_section">malikumair.dev@gmail.com</p>
+              <p id="user_email" class="text editable_section">
+                malikumair.dev@gmail.com
+              </p>
             </div>
             <div class="sub_container mt-20">
               <h1 class="heading">Languages</h1>
@@ -60,7 +64,9 @@
             <table>
               <tr>
                 <td>Father Name:</td>
-                <td class="editable_section" id="father_name">Muhammad Khalid Khan</td>
+                <td class="editable_section" id="father_name">
+                  Muhammad Khalid Khan
+                </td>
               </tr>
               <tr>
                 <td>Date of Birth:</td>
@@ -72,7 +78,9 @@
               </tr>
               <tr>
                 <td>Marital Status:</td>
-                <td class="editable_section" id="user_maritalStatus">Married</td>
+                <td class="editable_section" id="user_maritalStatus">
+                  Married
+                </td>
               </tr>
               <tr>
                 <td>Religion</td>
@@ -87,7 +95,21 @@
               <li class="editable_section">Node Js</li>
               <li class="editable_section">Next Js</li>
             </ul>
-            <h1 class="heading editable_section">Work Experience</h1>
+            <h1 class="heading">Education</h1>
+            <hr class="line" />
+            <ul id="user_experience">
+              <li class="editable_section">
+                Matriculation from <b>Karaci Board</b> in 2019.
+              </li>
+              <li class="editable_section">
+                Intermediate from <b>Karachi Board</b> in 2021.
+              </li>
+              <li class="editable_section">
+                Bachelor in Software Engineering from
+                <b>Sindh Madersatul Islam University</b> in 2025.
+              </li>
+            </ul>
+            <h1 class="heading">Work Experience</h1>
             <hr class="line" />
             <ul id="user_experience">
               <li class="editable_section">
