--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -17,7 +17,7 @@
               data-localstorage-id="name_input"
               class="name_heading editable_section"
             >
-              Malik Umair Khalid
+              Muhammad Khalid Khan
             </h1>
             <div>
               <img class="profile_image" src="./assets/profile.jpg" alt="" />
